fixed overflow

--- a/frontend/src/components/banner/styles.module.css
+++ b/frontend/src/components/banner/styles.module.css
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   background-color: #0194e9;
 }
 
@@ -32,5 +31,4 @@
   justify-content: center;
   align-items: center;
   padding: 5px;
-  margin-right: 40px;
 }
